<resources>
    <string name="app_name">TravelBuddyApp</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_password">Show Password</string>
    <string name="password_should_be_atleast_of_6_characters">*Password should be atleast of 6 characters</string>
    <string name="re_type_password">Re-type password:</string>
    <string name="username">Username:</string>
    <string name="Register">Register</string>
    <string name="e_mail">E-mail:</string>
    <string name="traveller">Traveller</string>
    <string name="password">Password:</string>
    <string name="guide">Guide</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="title_activity_local_translation_fragment">LocalTranslationFragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_stay">Stay</string>
    <string name="title_trip">Trip</string>
    <string name="title_account">Account</string>
    <string name="search_for_stay_here">Search for stay here...</string>
    <string name="apple_macbook_air_core_i5_5th_gen_8_gb_128_gb_ssd_mac_os_sierra">Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)</string>
    <string name="_13_3_inch_256_gb">13.3 Inch, 256 GB</string>
    <string name="_4_7">4.7</string>
    <string name="inr_56990">INR 56990</string>
    <string name="name_of_the_host">Name of the Host</string>
    <string name="name_of_the_stay">Name of the stay</string>
    <string name="_4_5">4.5</string>
    <string name="other_short_breif">Other Short breif</string>
    <string name="textview">TextView</string>
    <string name="travellers">Travellers</string>

    <string name="_1">1</string>
    <string name="select_date">Select Date</string>
    <string name="request_stay">Request Stay</string>
    <string name="name">Name</string>
    <string name="show_email_com">show@email.com</string>


<<<<<<< HEAD

=======
>>>>>>> 5bf9534eddc3ef617fb6f4d75ee5d8a2d4354e82
</resources>
