<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_gradient"
    tools:context=".Signup_fragment">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="110dp"
        android:text="@string/username"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="110dp"
        android:layout_toRightOf="@+id/userNameText"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="160dp"
        android:text="@string/e_mail"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="160dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="210dp"
        android:text="@string/password"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="210dp"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="260dp"
        android:text="@string/re_type_password"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/register_reTypePassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="260dp"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="310dp"
        android:text="@string/password_should_be_atleast_of_6_characters"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/showPassword_register"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="335dp"
        android:text="@string/show_password"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp">

        <RadioButton
            android:id="@+id/travellerButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="380dp"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:text="@string/traveller"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <RadioButton
            android:id="@+id/guideButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-40dp"
            android:buttonTint="@android:color/white"
            android:text="@string/guide"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:background="@color/colorPrimary"
        android:text="REGISTER"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/alreadyUser_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@android:color/transparent"
        android:text="Already a user? Login"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/background_light" />

</RelativeLayout>