<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/call_button"
                style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="false"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="-43dp"
                android:background="@android:drawable/menuitem_background"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <TextView
                android:id="@+id/textView_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_stay"
                android:text="@string/name_of_the_host"
                android:textStyle="bold"
                android:textColor="@color/colorBottomNavigationNotification"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:shadowColor="@color/cardview_dark_background"
                android:text="@string/name_of_the_stay"
                android:textAllCaps="false"
                android:textColor="@color/colorBottomNavigationAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignTop="@+id/imageView"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/ratingBar"
                android:layout_toStartOf="@+id/ratingBar"
                android:text="@string/_4_5"
                android:textColor="@color/colorBottomNavigationActiveColored"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_alignTop="@+id/imageView"
                android:layout_margin="5dp"
                android:numStars="1"
                android:rating="1"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/stay_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_person"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="Dates Available" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>